--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://en.apkshki.com/storage/1197/icon_5ea1b747d3673_1197_w256.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Gearbest: Affordable Quality, Fun Shopping</title>
   </head>
   <body>
     <div id="root"></div>
