updated title and logo

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://image.winudf.com/v2/image1/Y29tLmdsb2JhbGVncm93LmFwcC5nZWFyYmVzdF9pY29uXzE1NjEwNTQyNDlfMDc5/icon.png?w=&fakeurl=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Gearbest: Affordable Quality, Fun Shopping</title>
   </head>
   <body>
     <div id="root"></div>
